--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha './tests/**/*.test.js'",
+    "test": "jest './tests/**/*.test.js'",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/preset-env": "^7.26.0",
     "bcrypt": "^5.1.1",
     "chai": "^5.1.2",
     "cookie-parser": "^1.4.7",
@@ -24,5 +25,10 @@
     "mongoose": "^8.9.4",
     "sinon": "^7.5.0",
     "sinon-mongoose": "^2.3.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "proxyquire": "^2.1.3",
+    "rewire": "^7.0.0"
   }
 }
