--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
