--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "framer-motion": "^12.0.5",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.6.0",
@@ -23,7 +25,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
